# testrepo

./: .gitignore  README.md  UTILS_CHANGELOG.md  datetime_utils.py  dict_utils.py  duration.py  encoding_utils.py  fibonacci.py  file_utils.py  formatting_utils.py  json_utils.py  list_utils.py  math_utils.py  number_utils.py  print_numbers.py  pyproject.toml  random_utils.py  regex_utils.py  roman.py  string_utils.py  test_cli.py  test_color_utils.py  test_datetime_utils.py  test_dict_utils.py  test_duration.py  test_encoding_utils.py  test_file_utils.py  test_formatting_utils.py  test_iter_utils.py  test_json_utils.py  test_list_utils.py  test_math_utils.py  test_number_utils.py  test_random_utils.py  test_regex_utils.py  test_retry.py  test_roman.py  test_slugify.py  test_string_utils.py  test_text_utils.py  (+5 more)
.github/workflows/: ci.yml
docs/: COLOR_UTILS.md  DATETIME_UTILS.md  DICT_UTILS.md  ENCODING_UTILS.md  EXTRA_UTILS_README.md  FILE_UTILS.md  FORMATTING_UTILS.md  JSON_UTILS.md  LIST_UTILS.md  README.md  REGEX_UTILS.md  STRING_UTILS.md  TEXT_UTILS.md  UTILS_INDEX.md  VALIDATION.md  duration.md  math_utils.md  number_utils.md  retry.md  roman.md  slugify.md  string_utils.md  validation_utils.md
fixtures/: auto_generated_linecount_sample.txt  auto_generated_linecount_sample_batch2.txt
tickets/: 002-add-logging-across-utils.md  003-something-completely-new.md  004-package-restructure-cli-docs.md  006-add-utils-error-base-class.md
utils/: __init__.py  __main__.py  cli.py  color_utils.py  dict_utils.py  duration.py  iter_utils.py  json_utils.py  math_utils.py  number_utils.py  retry.py  roman.py  slugify.py  string_utils.py  text_utils.py  validation_utils.py
