[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "utils"
version = "0.1.0"
description = "Collection of utility modules: string, dict, json, color, duration, validation, and more"
readme = "README.md"
requires-python = ">=3.10"

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
utils = "utils.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["utils*"]

[tool.setuptools.package-data]
utils = ["py.typed"]
