[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "utils"
version = "0.1.0"
description = "Collection of utility modules: string, dict, json, color, duration, validation, and more"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["utilities", "helpers", "typing"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/matejasilva/testrepo"
Repository = "https://github.com/matejasilva/testrepo"
Issues = "https://github.com/matejasilva/testrepo/issues"

[project.optional-dependencies]
dev = ["pytest>=8", "mypy>=1.8"]

[project.urls]
Documentation = "https://github.com/matejasilva/testrepo/blob/main/docs/README.md"

[project.scripts]
utils = "utils.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["utils*"]

[tool.mypy]
python_version = "3.10"
files = ["utils"]
